[package]
name = "polylauncher"
version = "0.1.0"
edition = "2021"
default-run = "daemon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "^4.0.32", features = [ "derive" ] }
clap-verbosity-flag = "^2.0.0"
log = "^0.4.17"
env_logger = "^0.10.0"
anyhow = "^1.0.68"
serde = { version = "1.0.152", features = ["derive"] }
xshell = "0.2.3"
regex = "1.7.1"
lazy_static = "1.4.0"
hostname = "0.3.1"
rayon = "1.6.1"
ctrlc = "3.2.5"
[dependencies.confy]
version = "^0.5.1"
# path = "../confy"
features = ["yaml_conf"]
default-features = false  
 